# TASK_2-MARS_CLUB

./: README.md
src/task2_mars/: package.xml
src/task2_mars/src/: sensor_data.cpp  stopping_sense.cpp  warning_signal.cpp
task2_mars/: CMakeLists.txt
task2_mars/src/: sensor_data.cpp  stopping_sense.cpp
task2_mars_pkg/: CMakeLists.txt  package.xml
task2_mars_pkg/src/: warning_signal.cpp
